these are my class project files

--- a/ms2/csslayout/index.html
+++ b/ms2/csslayout/index.html
@@ -32,8 +32,8 @@
 			    </div>
 			</form>
 			<div>
-				<button class="action-button">Submit</button>
-				<button class="red-button">Cancel</button>
+				<button class="btn action-button">Submit</button>
+				<button class="btn warning-button">Cancel</button>
 			</div>		
 		</div>
 	</div>
